Bug 96282. Make nsOutlinerRows::Last() work correctly when there are empty subtrees in the rows. r=varga, sr=kin, a=dbaron